src/app.css
@import '@fontsource/fira-mono';
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;500;600;700;800;900&display=swap');

:root {
	--text-color: #444444;
	--logo-color: rgba(27, 160, 133, 1);
	--light-background: #f9f8f9;
	--light-secondary: #fff;
	--dark-background: #172029;
	--dark-secondary: #1c1f28;
	--dark-thirty: rgba(25, 25, 25, 1); 
}

body {
	font-family: 'Poppins', sans-serif;
	min-height: 100vh;
	margin: 0;
	background-color: var(--light-background);
}

#svelte {
	min-height: 100vh;
	display: flex;
	flex-direction: column;
}

p {
	line-height: 1.5;
}

h1 {
	font-size: 2rem;
	margin-bottom: 0 0 1em 0;
	text-align: center;
}

h2 {
	font-size: 1rem;
}

pre {
	font-size: 16px;
	font-family: var(--font-mono);
	background-color: rgba(255, 255, 255, 0.45);
	border-radius: 3px;
	box-shadow: 2px 2px 6px rgb(255 255 255 / 25%);
	padding: 0.5em;
	overflow-x: auto;
	color: var(--text-color);
}

input,
button {
	font-size: inherit;
	font-family: inherit;
}

input:focus,
select:focus,
textarea:focus,
button:focus {
	outline: none;
}

button:focus:not(:focus-visible) {
	outline: none;
}

::-webkit-scrollbar {
	width: 5px;
	border-radius: 20px;
}

/* Track */
::-webkit-scrollbar-track {
	background: #f9f9f9;
}

/* Handle */
::-webkit-scrollbar-thumb {
	background: var(--text-color);
}

/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
	background: #555;
}

